Teoria_Basica/borrar/pythontex-files-pythontex_gallery/py_errorsession_9_0.stderr
  File "py_errorsession_9.py", line 3
    z = x + y +
              ^
SyntaxError: invalid syntax
